@@ -613,5 +613,7 @@
     <string name="date_picker">Pick Date</string>
     <string name="time_picker">Pick Time</string>
     <string name="complete_form">Please complete the form!</string>
+    <string name="no_drafts">No drafts found</string>
+    <string name="no_queued">No queued tweets</string>
 
 </resources>
